--- a/index.html
+++ b/index.html
@@ -15,31 +15,21 @@
     <title>Frontend Mentor | Tic Tac Toe</title>
   </head>
   <body>
-    <!-- New game menu start -->
-
-    Pick player 1's mark Remember: X goes first New Game (vs CPU) New Game (vs
-    player)
-
-    <!-- New game menu end -->
-
-    <!-- Game board start -->
-
-    <!-- x/o icon -->
-    turn X (You)
-    <!-- Your score -->
-    Ties
-    <!-- Ties score -->
-    X (CPU)
-    <!-- CPU score -->
-
-    Oh no, you lost You won! Player
-    <!-- 1/2 -->
-    wins!
-
-    <!-- x/o icon -->
-    takes the round Round tied Restart game? Quit Next round No, cancel Yes,
-    restart
-
-    <!-- Game board end -->
+    <div class="app">
+      <img src="./assets/logo.svg" alt="" />
+      <div>
+        <h1>Pick player 1's mark</h1>
+        <form>
+          <input type="radio" name="mark" id="x" value="x" />
+          <label for="x">x</label>
+          <input type="radio" name="mark" id="o" value="o" />
+          <label for="o">o</label>
+        </form>
+        <p>Remember: x goes first</p>
+      </div>
+      <div class="buttons">
+        <button>new game (vs cpu)</button><button>new game (vs player)</button>
+      </div>
+    </div>
   </body>
 </html>
