Style the New Game elements

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
   </head>
   <body>
     <div class="app">
-      <img src="./assets/logo.svg" alt="" />
-      <div>
+      <img src="./assets/logo.svg" alt="logo" />
+      <div class="select-mark">
         <h1>Pick player 1's mark</h1>
         <form>
-          <input type="radio" name="mark" id="x" value="x" />
-          <label for="x">x</label>
-          <input type="radio" name="mark" id="o" value="o" />
-          <label for="o">o</label>
+          <div>
+            <input type="radio" name="mark" id="x" value="x" />
+            <label for="x">x</label>
+          </div>
+          <div>
+            <input type="radio" name="mark" id="o" value="o" />
+            <label for="o">o</label>
+          </div>
         </form>
         <p>Remember: x goes first</p>
       </div>
