Add the game grid div

--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
         <button>new game (vs cpu)</button><button>new game (vs player)</button>
       </div>
     </div>
+    <div class="game-grid">
+      Game Grid
+    </div>
   </body>
 </html>
