--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./css/main.css" />
 
     <title>Frontend Mentor | Tic Tac Toe</title>
   </head>
