Add styling for the new game selection elements

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <div class="select-mark">
         <h1>Pick player 1's mark</h1>
         <form>
-          <div>
+          <div id="x-mark__section">
             <input type="radio" name="mark" id="x" value="x" />
-            <label for="x">x</label>
+            <label for="x"></label>
           </div>
-          <div>
+          <div id="o-mark__section">
             <input type="radio" name="mark" id="o" value="o" />
-            <label for="o">o</label>
+            <label for="o"></label>
           </div>
         </form>
         <p>Remember: x goes first</p>
