Add media queries for the new game menu and the game grid

--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
         <button>new game (vs cpu)</button><button>new game (vs player)</button>
       </div>
     </div>
+    <!-- Game Grid section -->
     <div class="game-grid">
       <header class="flexbox">
         <img class="xo" src="./assets/logo.svg" alt="">
-        
-
         <div class="turn-screen"><img class="x-turn" src="./assets/icon-x-turn.svg" alt="">turn</div>
         <button class="refresh-button">
           <img src="./assets/icon-restart.svg" alt="" />
@@ -67,7 +66,7 @@
           32
         </div>
         <div class="cpu">
-          <p>0 (cpu)</p>
+          <p>o (cpu)</p>
           11
         </div>
       </footer>
