Add JS file with simple event listener for the first grid cell

--- a/index.html
+++ b/index.html
@@ -37,23 +37,25 @@
     <!-- Game Grid section -->
     <div class="game-grid">
       <header class="flexbox">
-        <img class="xo" src="./assets/logo.svg" alt="">
-        <div class="turn-screen"><img class="x-turn" src="./assets/icon-x-turn.svg" alt="">turn</div>
+        <img class="xo" src="./assets/logo.svg" alt="" />
+        <div class="turn-screen">
+          <img class="x-turn" src="./assets/icon-x-turn.svg" alt="" />turn
+        </div>
         <button class="refresh-button">
           <img src="./assets/icon-restart.svg" alt="" />
         </button>
       </header>
       <main>
         <div class="grid-container">
-          <div class="squares icon-x"></div>
           <div class="squares"></div>
-          <div class="squares icon-x" ></div>
           <div class="squares"></div>
-          <div class="squares icon-o" ></div>
-          <div class="squares icon-x" ></div>
-          <div class="squares icon-o"></div>
           <div class="squares"></div>
-          <div class="squares icon-o"></div>
+          <div class="squares"></div>
+          <div class="squares"></div>
+          <div class="squares"></div>
+          <div class="squares"></div>
+          <div class="squares"></div>
+          <div class="squares"></div>
         </div>
       </main>
       <footer>
@@ -87,5 +89,6 @@
         </div>
       </div>
     </div>
+    <script src="./js/main.js"></script>
   </body>
 </html>
