trying to figure out how to display a icon in the gridCells.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="turn-screen">
           <img class="x-turn" src="./assets/icon-x-turn.svg" alt="" />turn
         </div>
-        <button class="refresh-button">
+        <button class="refresh-button" id="myBtn">
           <img src="./assets/icon-restart.svg" alt="" />
         </button>
       </header>
@@ -73,7 +73,7 @@
         </div>
       </footer>
     </div>
-    <div class="modal">
+    <div class="modal" id="myModal">
       <div class="modal-container">
         <p class="first-message">oh no, you lost...</p>
         <p class="second-message">
