Add logic for clicking on the grid cells to display alternating player icons

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </p>
         <div class="modal-button-section">
           <button class="quit-button">quit</button
-          ><button class="next-round-button">next round</button>
+          ><button class="next-round-button" id="next-round">next round</button>
         </div>
       </div>
     </div>
